--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "antd": "^5.20.6",
     "classnames": "^2.5.1",
+    "exifr": "^7.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
